PG库删除时提醒现在有连接

--- a/grew/20180905.md
+++ b/grew/20180905.md
@@ -48,3 +48,7 @@ service sshd restart
 ssh -o ServerAliveInterval=60 uersname@ip -p port
 ```
 
+# postgresql 删除库提示有连接？
+```
+select pg_terminate_backend(pid) from  (select pid from pg_stat_activity where datname = 'dbname'  ) a;
+```
