split切割大文件

--- a/grew/20180905.md
+++ b/grew/20180905.md
@@ -52,3 +52,9 @@ ssh -o ServerAliveInterval=60 uersname@ip -p port
 ```
 select pg_terminate_backend(pid) from  (select pid from pg_stat_activity where datname = 'dbname'  ) a;
 ```
+#  文件切割
+split 命令 可以将一个大文件分割成很多个小文件。
+```
+split -l 10 test.txt -d -a 3 file 
+#将 test.txt 文件每 10 行切分一次，使用 file 作为前缀，数字作为后缀，后缀长度为 3
+```
