Nginx配置简单防爬虫

--- a/grew/20180905.md
+++ b/grew/20180905.md
@@ -58,3 +58,18 @@ split 命令 可以将一个大文件分割成很多个小文件。
 split -l 10 test.txt -d -a 3 file 
 #将 test.txt 文件每 10 行切分一次，使用 file 作为前缀，数字作为后缀，后缀长度为 3
 ```
+## Nginx简单防爬虫配置
+
+```
+    ...
+    location / {
+        if ($http_user_agent ~* "python|curl|java|wget|httpclient|okhttp") {
+            return 503;
+        }
+        # 正常处理
+        ...
+    }
+    ...
+```
+
+变量`$http_user_agent`是一个可以直接在`location`中引用的Nginx变量。`~*`表示不区分大小写的正则匹配，通过`python`就可以过滤掉80%的Python爬虫。
