ubuntu install wget sourceforge.net/projects/openofficeorg.mirror/files/4.1.1/binaries/en-GB/Apache_OpenOffice_4.1.1_Linux_x86-64_install-deb_en-GB.tar.gz

--- a/grew/20180905.md
+++ b/grew/20180905.md
@@ -73,3 +73,14 @@ split -l 10 test.txt -d -a 3 file
 ```
 
 变量`$http_user_agent`是一个可以直接在`location`中引用的Nginx变量。`~*`表示不区分大小写的正则匹配，通过`python`就可以过滤掉80%的Python爬虫。
+
+## Ubuntu 64位安装 OpenOffice
+
+```
+wget sourceforge.net/projects/openofficeorg.mirror/files/4.1.1/binaries/en-GB/Apache_OpenOffice_4.1.1_Linux_x86-64_install-deb_en-GB.tar.gz
+tar -xzvf Apache_OpenOffice_4.1.1_Linux_x86-64_install-deb_en-GB.tar.gz
+cd en-GB/DEBS
+sudo dpkg -i *.deb
+cd desktop-integration
+sudo dpkg -i *.deb
+```
