--- a/grew/20180919.md
+++ b/grew/20180919.md
@@ -58,7 +58,7 @@ split 命令 可以将一个大文件分割成很多个小文件。
 split -l 10 test.txt -d -a 3 file 
 #将 test.txt 文件每 10 行切分一次，使用 file 作为前缀，数字作为后缀，后缀长度为 3
 ```
-## Nginx简单防爬虫配置
+# Nginx简单防爬虫配置
 
 ```
     ...
@@ -74,7 +74,7 @@ split -l 10 test.txt -d -a 3 file
 
 变量`$http_user_agent`是一个可以直接在`location`中引用的Nginx变量。`~*`表示不区分大小写的正则匹配，通过`python`就可以过滤掉80%的Python爬虫。
 
-## Ubuntu 64位安装 OpenOffice
+# Ubuntu 64位安装 OpenOffice
 
 ```
 wget sourceforge.net/projects/openofficeorg.mirror/files/4.1.1/binaries/en-GB/Apache_OpenOffice_4.1.1_Linux_x86-64_install-deb_en-GB.tar.gz
@@ -84,3 +84,21 @@ sudo dpkg -i *.deb
 cd desktop-integration
 sudo dpkg -i *.deb
 ```
+# 进入Python项目自动载入python虚拟环境
+
+从Github下载源码
+
+```
+cd /opt
+git clone https://github.com/kennethreitz/autoenv.git 
+echo 'source /opt/autoenv/activate.sh' >> ~/.bashrc 
+source ~/.bashrc
+```
+
+具体的项目环境配置下
+
+```
+echo "source /opt/py3/bin/activate" > /opt/project_name/.env  
+```
+
+第一次进入项目，需要选择 yes
