--- a/grew/20180919.md
+++ b/grew/20180919.md
@@ -102,3 +102,33 @@ echo "source /opt/py3/bin/activate" > /opt/project_name/.env
 ```
 
 第一次进入项目，需要选择 yes
+
+# Linux查看显卡信息
+
+```
+lspci | grep -i vga
+```
+
+# Zabbix忘记密码
+
+```
+#进入数据库
+mysql> use zabbix;
+Reading table information for completion of table and column names
+You can turn off this feature to get a quicker startup with -A
+Database changed
+
+#查看数据有那些表
+
+mysql> show tables;
+
+#查看是否存放用户、密码信息
+
+mysql> select * from users;
+
+#更改密码为zabbix
+mysql> update  users set passwd=md5("password") where userid='1';
+Query OK, 0 rows affected (0.01 sec)
+Rows matched: 1  Changed: 0  Warnings: 0
+```
+
