服务器获取外网地址及ip所在地区

--- a/grew/20180919.md
+++ b/grew/20180919.md
@@ -132,3 +132,36 @@ Query OK, 0 rows affected (0.01 sec)
 Rows matched: 1  Changed: 0  Warnings: 0
 ```
 
+# Ubuntu 安装中文包
+
+```
+locale #查看系统已经安装的语言包
+apt-get install language-pack-zh-hant language-pack-zh-hans -y
+dpkg-reconfigure locales 
+```
+
+# 服务器获取外网地址
+
+## 只返回IP地址
+
+```
+curl ip.6655.com/ip.aspx
+curl whatismyip.akamai.com
+wget -qO - ifconfig.co
+curl icanhazip.com
+dig +``short` `myip.opendns.com @resolver1.opendns.com
+curl ident.me
+curl v4.ident.me
+curl curlmyip.com
+curl ifconfig.me
+curl inet-ip.info
+```
+
+ ## 返回IP和地区
+
+```
+curl ip.cn
+curl cip.cc
+curl ip.gs
+```
+
