vim chinese 中文乱码

--- a/grew/20180919.md
+++ b/grew/20180919.md
@@ -165,3 +165,21 @@ curl cip.cc
 curl ip.gs
 ```
 
+# vim中文乱码
+
+vim ～/.vimrc
+
+```
+set encoding=utf-8 nobomb  
+
+set termencoding=utf-8   
+
+set fileencodings=utf-8,gbk,utf-16le,cp1252,iso-8859-15,ucs-bom   
+
+set fileformats=unix,dos,mac
+```
+
+```
+source ～/.vimrc
+```
+
