mac终端使用密钥连接服务器

--- a/grew/20180919.md
+++ b/grew/20180919.md
@@ -183,3 +183,11 @@ set fileformats=unix,dos,mac
 source ～/.vimrc
 ```
 
+# mac终端使用密钥连接服务器
+
+先cd到密钥所在目录
+
+```
+ssh -i "zyd.rsa" root@126.66.666
+```
+
