zabbix取值排除多余的结果

--- a/grew/20180919.md
+++ b/grew/20180919.md
@@ -191,3 +191,11 @@ source ～/.vimrc
 ssh -i "zyd.rsa" root@126.66.666
 ```
 
+# zabbix 取值排除多余的结果
+
+2>/dev/null  排除多余的字符串或者警告信息，让zabbix更好的读取结果
+
+```
+curl -I  http://192.168.0.42:6788/t/m/ 2>/dev/null  |head -1 |awk '{print $2}'
+```
+
