ik中文分词检测

--- a/grew/20181019.md
+++ b/grew/20181019.md
@@ -11,3 +11,12 @@ img.lijinghua.club
 ·····
 ```
 
+
+
+# es的ik中文分词测试
+
+```
+curl -XPUT http://localhost:9200/index2
+curl 'http://localhost:9200/index2/_analyze?analyzer=ik_max_word&pretty=true' -d '{"text":"我是中国人"}'
+```
+
