--- a/grew/20181019.md
+++ b/grew/20181019.md
@@ -20,3 +20,29 @@ curl -XPUT http://localhost:9200/index2
 curl 'http://localhost:9200/index2/_analyze?analyzer=ik_max_word&pretty=true' -d '{"text":"我是中国人"}'
 ```
 
+
+
+# truncate删除一个表里的所有内容
+
+使用 TRUNCATE TABLE 删除所有行
+若要删除表中的所有行，则 TRUNCATE TABLE 语句是一种快速、无日志记录的方法。该语句总是比不带条件的 DELETE 语句要快，因为 DELETE 语句要记录对每行的删除操作，而 TRUNCATE TABLE 语句只记录整个数据页的释放。TRUNCATE TABLE 语句立即释放由该表的数据和索引占用的所有空间。所有索引的分发页也将释放。
+
+与 DELETE 语句相同，使用 TRUNCATE TABLE 清空的表的定义，同其索引和其它相关的对象一起仍保留在数据库中。必须使用 DROP TABLE 语句才能除去表的定义。
+
+```
+TRUNCATE TABLE table_name ;
+```
+
+# Mac上安装wget
+
+
+
+```
+/usr/bin/ruby -e "$(curl -fsSL http://raw.githubusercontent.com/Homebrew/install/master/install)"
+
+#注意权限
+sudo chown user.user /usr/local/Cellar/openssl
+brew install wget
+
+```
+
