--- a/grew/20181019.md
+++ b/grew/20181019.md
@@ -46,3 +46,25 @@ brew install wget
 
 ```
 
+# 安装pip新姿势
+
+```
+python get-pip.py
+```
+
+
+
+# 安装nvtop
+
+查看NVidia GPU 的状态
+
+ubuntu 
+
+```
+apt install cmake libncurses5-dev git
+git clone https://github.com/Syllo/nvtop.git
+mkdir -p nvtop/build && cd nvtop/build
+cmake .. -DNVML_RETRIEVE_HEADER_ONLINE=True
+make
+make install 
+```
