--- a/grew/20181019.md
+++ b/grew/20181019.md
@@ -68,3 +68,71 @@ cmake .. -DNVML_RETRIEVE_HEADER_ONLINE=True
 make
 make install 
 ```
+
+# 查看系统硬件设施lshw/dmidecode
+
+你想知道的信息这里都有，会输出一大串
+
+```
+dmidecode
+lshw
+```
+
+腾讯云重庆地区
+
+```
+➜  ~ dmidecode |grep Product
+	Product Name: KVM
+```
+
+腾讯云华北一区
+
+```
+➜  ~ dmidecode |grep Product
+	Product Name: Bochs
+```
+
+EXSI虚拟机器
+
+```
+root@zabbix-0:~# dmidecode |grep Product
+	Product Name: VMware Virtual Platform
+	Product Name: 440BX Desktop Reference Platform
+```
+
+阿里云华北一区
+
+```
+➜  ~ dmidecode |grep Product
+        Product Name: Alibaba Cloud ECS
+```
+
+ 以html/xml格式输出
+
+```
+lshw -html >info.html
+lshw -xml >info.xml
+```
+
+
+
+```
+显示设备列表，输出包括设备路径(path)、类别(class)以及简单描述
+
+lshw -short
+
+显示设备列表，输出包括总线信息、SCSI、USB、IDE、PCI地址等。
+
+lshw -businfo
+
+显示指定类别的设备
+
+lshw -C class
+
+lshw -class class
+
+这里的class可以通过lshw -short来查看。比如
+
+lshw -C memory
+```
+
