DB 删除某一列

--- a/grew/20181019.md
+++ b/grew/20181019.md
@@ -136,3 +136,19 @@ lshw -class class
 lshw -C memory
 ```
 
+
+
+# mysql删除某一列
+
+如果删除字段的值，可以将所有值清空：
+
+```
+UPDATE table_name SET field_name = " ";
+```
+
+如果删除字段（这个字段从此就没有了）：
+
+```
+ALTER TABLE table_name DROP COLUMN field_name;
+```
+
