生成随机数字或字母或字符

--- a/grew/20181019.md
+++ b/grew/20181019.md
@@ -152,3 +152,19 @@ UPDATE table_name SET field_name = " ";
 ALTER TABLE table_name DROP COLUMN field_name;
 ```
 
+
+
+# 生成随机数字
+
+```
+</dev/urandom tr -dc A-Za-z0-9 | head -c8
+UGczdA15
+```
+
+当然，可以灵活使用
+
+```
+➜  mnt </dev/urandom tr -dc A-Za-z0-9,.//,..,.,.,.,..,. | head -c12
+aYQHEKW6,cQ1
+```
+
