--- a/problem/20181112.md
+++ b/problem/20181112.md
@@ -1,8 +1,16 @@
 # Redis
 
+报错如下
+
 *MISCONF Redis is configured to save RDB snapshots, but is currently not able to persist on disk. Commands that may modify the data set are disabled. Please check Redis logs for details about the error*
 
 
+
+###  问题所在
+
+在小内存的进程上做一个fork,不需要太多资源，但当这个进程的内存空间以Ｇ为单位时，fork就成为一件很恐怖的操作。何况在16G内存的主机上fork 14G内存的进程呢？肯定会报内存无法分配的。更可气的是，越是改动频繁的主机上fork也越频繁，fork操作本身的代价恐怕也不会比假死好多少
+
+### 解决
 
 Redis配置文件临时解决：
 
@@ -12,8 +20,6 @@ Redis配置文件临时解决：
 vim redis.conf
 stop-writes-on-bgsave-error no
 ```
-
-
 
 根本解决：
 
@@ -27,13 +33,14 @@ vm.overcommit_memory = 1
 sysctl -p  #生效
 ```
 
-
-
 vm.overcommit_memory = 0：则比较 此次请求分配的虚拟内存大小和系统当前空闲的物理内存加上swap，决定是否放行。
 
 vm.overcommit_memory = 2：则会比较 进程所有已分配的虚拟内存加上此次请求分配的虚拟内存和系统当前的空闲物理内存加上swap，决定是否放行
 
+### redis 的回写机制
 
+Redis的数据回写机制分同步和异步两种，
 
-原文链接：[http://blog.51cto.com/thedream/1944345](http://blog.51cto.com/thedream/1944345)
+同步回写即SAVE命令，主进程直接向磁盘回写数据。在数据大的情况下会导致系统假死很长时间，所以一般不是推荐的。
 
+异步回写即BGSAVE命令，主进程fork后，复制自身并通过这个新的进程回写磁盘，回写结束后新进程自行关闭。由于这样做不需要主进程阻塞，系统不会假死，一般默认会采用这个方法。
