--- a/grew/20181019.md
+++ b/grew/20181019.md
@@ -174,7 +174,7 @@ aYQHEKW6,cQ1
 strings lib.so lib.txt 
 ```
 
-## 查看某用户下面的进程
+# 查看某用户下面的进程
 
 ```
 ps -u user
@@ -182,5 +182,27 @@ ps -u user
 
 ```
 top -u user 
+```
+
+# 根据端口看=====用户，进程，pid
+
+## fuser
+
+```
+➜  /etc fuser -v -n tcp 800
+Cannot stat file /proc/24084/fd/4: Stale file handle
+Cannot stat file /proc/24274/fd/4: Stale file handle
+                     USER        PID ACCESS COMMAND
+800/tcp:             root       1283 F.... nginx
+                     www        1284 F.... nginx
+```
+
+## lsof
+
+```
+➜  lsof -i :800
+COMMAND  PID USER   FD   TYPE DEVICE SIZE/OFF NODE NAME
+nginx   1283 root    7u  IPv4  15339      0t0  TCP *:800 (LISTEN)
+nginx   1284  www    7u  IPv4  15339      0t0  TCP *:800 (LISTEN)
 ```
 
