--- a/grew/20181119.md
+++ b/grew/20181119.md
@@ -27,3 +27,26 @@ rdmsr 0x3a
 
 
 
+# Linux文件系统相关
+
+
+
+| 文件系统 | 最大支持文件系统量级             | 最大单个文件 | 子目录数量 | 备注 |
+| -------- | -------------------------------- | ------------ | ---------- | ---- |
+| Ext2     | 16TB                             | 2TB          | 31998      |      |
+| Ext3     | 16TB（Ext4所支持的最大单个文件） | 2TB          | 32,000     |      |
+| Ext4     | 1EB                              | 16TB         | 无限       |      |
+|          |                                  |              |            |      |
+
+ext2是Linux上第一个商业级文件系统.
+
+虽然 Ext2 已经能够支持大于 2GB 以上的单一文件容量，不过某些应用程序依然使用旧的限制， 也就是说，某些程序只能够捉到小于 2GB 以下的文件而已，这就跟文件系统无关了
+
+ext3 基于ext2 的代码，它的磁盘格式和 ext2 的相同
+
+一个干净卸装的 ext3 文件系统可以作为 ext2 文件系统重新挂装。Ext3文件系统仍然能被加载成ext2文件系统来使用，你可以把一个文件系统在ext3和ext2自由切换。这时在ext2文件系统上的ext3日志文件仍然存在,只是ext2不能认出日志而已
+
+# Windows文件系统相关
+
+wait
+
