zsh no matches found

--- a/problem/20181112.md
+++ b/problem/20181112.md
@@ -44,3 +44,32 @@ Redis的数据回写机制分同步和异步两种，
 同步回写即SAVE命令，主进程直接向磁盘回写数据。在数据大的情况下会导致系统假死很长时间，所以一般不是推荐的。
 
 异步回写即BGSAVE命令，主进程fork后，复制自身并通过这个新的进程回写磁盘，回写结束后新进程自行关闭。由于这样做不需要主进程阻塞，系统不会假死，一般默认会采用这个方法。
+
+
+
+# zsh  no matches found
+
+```
+zsh: no matches found
+```
+
+
+
+## 原因
+
+因为zsh缺省情况下始终自己解释这个 *.h，而不会传递给 find 来解释。
+
+##  解决办法：
+
+在~/.zshrc中加入: 
+
+```
+setopt no_nomatch
+```
+
+ 然后运行
+
+```
+source ～/.zshrc
+```
+
