加快ssh连接速度

--- a/grew/20181119.md
+++ b/grew/20181119.md
@@ -50,3 +50,19 @@ ext3 基于ext2 的代码，它的磁盘格式和 ext2 的相同
 
 wait
 
+
+
+# 通过修改sshd配置文件加快连接速度
+
+男人不能快，但是ssh连接一定要快
+
+以下均在server端修改
+
+```
+# vi /etc/ssh/sshd_config
+UseDNS=no         #关闭DNS反向解析，默认开启
+GSSAPIAuthentication no    #关闭SERVER上的GSS认证
+IgnoreRhosts yes           #打开SERVER上的IgnoreRhosts参数，可以忽略以前登录过主机的记录
+
+```
+
