加快ssh连接速度

--- a/grew/20181119.md
+++ b/grew/20181119.md
@@ -64,5 +64,7 @@ UseDNS=no         #关闭DNS反向解析，默认开启
 GSSAPIAuthentication no    #关闭SERVER上的GSS认证
 IgnoreRhosts yes           #打开SERVER上的IgnoreRhosts参数，可以忽略以前登录过主机的记录
 
+#重启sshd
+service sshd restart
 ```
 
