--- a/grew/20181119.md
+++ b/grew/20181119.md
@@ -74,3 +74,46 @@ service sshd restart
 time ssh root@hostname  exit
 ```
 
+# Ubuntu 18.04固定静态ip
+
+cat /etc/netplan/50-cloud-init.yaml
+
+```
+root@ubuntu:~# cat /etc/netplan/50-cloud-init.yaml
+
+# This file is generated from information provided by
+
+# the datasource.  Changes to it will not persist across an instance.
+
+# To disable cloud-init's network configuration capabilities, write a file
+
+# /etc/cloud/cloud.cfg.d/99-disable-network-config.cfg with the following:
+
+# network: {config: disabled}
+
+network:
+    ethernets:
+        eno1:
+            addresses: []
+            dhcp4: true
+        eno2:
+            addresses: [192.168.0.213/24,]
+            dhcp4: no
+            dhcp6: no
+            gateway4:  192.168.0.1
+            optional: true
+            nameservers:
+                addresses: [8.8.8.8, 9.9.9.9]
+    version: 2
+```
+
+其中，把dhcp4/dhcp6都设为no予以关闭，设上自己的ip地址、网关和域名服务器
+
+
+
+## 立刻生效
+
+```
+netplan apply
+```
+
