--- a/grew/20181119.md
+++ b/grew/20181119.md
@@ -117,3 +117,19 @@ network:
 netplan apply
 ```
 
+# ab压力测试
+
+## 安装
+
+```
+apt install apache2-utils -y
+```
+
+## 测试
+
+－n表示请求数，－c表示并发数
+
+```
+ab -n 10 -c 4 http://url.com/
+```
+
