jar包启动更改默认端口

--- a/grew/20181119.md
+++ b/grew/20181119.md
@@ -133,3 +133,13 @@ apt install apache2-utils -y
 ab -n 10 -c 4 http://url.com/
 ```
 
+
+
+# 运行jar包时指定端口
+
+
+
+```
+java -jar xxx.jar --server.port=8080
+```
+
