Ubuntu 16.04 Ipv4 set static

--- a/grew/20181119.md
+++ b/grew/20181119.md
@@ -117,6 +117,42 @@ network:
 netplan apply
 ```
 
+# Ubuntu 16.04设置固定ip
+
+先ifconfig 查看当前网卡叫啥，这里是ens160
+
+```bash
+root@paa1:~# ifconfig
+ens160    Link encap:Ethernet  HWaddr 00:0c:29:c4:e2:f4
+          inet addr:192.168.0.165  Bcast:192.168.0.255  Mask:255.255.255.0
+          inet6 addr: fda5:b414:c627:0:20c:29ff:fec4:e2f4/64 Scope:Global
+          inet6 addr: fe80::20c:29ff:fec4:e2f4/64 Scope:Link
+```
+
+
+
+```sh
+root@paa1:~# cat /etc/network/interfaces
+source /etc/network/interfaces.d/*
+auto lo
+iface lo inet loopback
+# The primary network interface
+auto ens160                #网卡名字
+iface ens160 inet static   #使用静态ip设置
+address 192.168.0.165      #设置ip地址
+netmask 255.255.255.0      #设置子网掩码
+gateway 192.168.0.1        #设置网关 
+dns-nameservers 114.114.114.114  #设置dns服务器地址
+```
+
+## 生效
+
+```
+/etc/init.d/networking restart
+```
+
+
+
 # ab压力测试
 
 ## 安装
