--- a/grew/20181119.md
+++ b/grew/20181119.md
@@ -179,3 +179,18 @@ ab -n 10 -c 4 http://url.com/
 java -jar xxx.jar --server.port=8080
 ```
 
+# nginx解决跨域问题
+
+```
+server{
+    # 监听8080端口
+    listen 8080;
+    # 域名是localhost
+    server_name localhost;
+    #凡是localhost:8080/api这个样子的，都转发到真正的服务端地址http://www.b.com:8080 
+    location ^~ /api {
+        proxy_pass http://www.b.com:8080;
+    }    
+}
+```
+
