--- a/grew/20181219.md
+++ b/grew/20181219.md
@@ -19,3 +19,49 @@ setgid:
 ```
 chmod 2755 xxx
 ```
+
+# swap优化
+
+swappiness的值的大小对如何使用swap分区是有着很大的联系的。
+
+swappiness=0的时候表示最大限度使用物理内存，然后才是 swap空间，swappiness＝100的时候表示积极的使用swap分区，并且把内存上的数据及时的搬运到swap空间里面。
+
+linux的基本默认设置为60
+
+```bash
+root@paa2:/tmp# cat /proc/sys/vm/swappiness
+60
+```
+
+意思是说，你的内存在使用到百分之40的时候，就会开始使用swap分区。
+
+内存的速度会比磁盘快很多，这样子会加大系统io，同时造的成大量页的换进换出，严重影响系统的性能，所以我们在操作系统层面，要尽可能使用内存，对该参数进行调整
+
+
+
+## 临时调整
+
+重启之后失效
+
+```bash
+root@paa2:/tmp# sysctl vm.swappiness=10
+vm.swappiness = 10
+root@paa2:/tmp# cat /proc/sys/vm/swappiness
+10
+```
+
+## 永久调整
+
+需要将在/etc/sysctl.conf修改
+
+```
+cat /etc/sysctl.conf
+···
+vm.swappiness=10
+···
+```
+
+```bash
+sysctl -p  #立即生效
+```
+
