--- a/grew/20181219.md
+++ b/grew/20181219.md
@@ -67,6 +67,8 @@ sysctl -p  #立即生效
 
 # 磁盘压测
 
+需要指出的是，使用 dd if 测量磁盘的带宽是可行的，但是由此来确定业务 I/O 的 IOPS 和吞吐量是不科学的。因为，dd if 所发起的读写仅为顺序 I/O 读写，在 OLTP 的业务中，这种读写是不常见的，而是随机小 I/O 比较多，因此，测量业务的磁盘 I/O 性能，需要在运行业务的时候进行监控
+
 ```
 time dd if=/dev/zero of=test.dbf bs=8k count=300000 oflag=direct
 ```
