[problem]es7.3启动问题

--- a/problem/20181112.md
+++ b/problem/20181112.md
@@ -106,3 +106,63 @@ kill -INT `head -1 /opt/postgresql/data/postmaster.pid`
 ```
 
 再重启 ，ok
+
+# ansible python模块问题
+
+
+
+```
+192.168.0.173 | FAILED! => {
+    "changed": false,
+    "module_stderr": "Shared connection to 192.168.0.173 closed.\r\n",
+    "module_stdout": "/bin/sh: 1: /usr/bin/python: not found\r\n",
+    "msg": "MODULE FAILURE\nSee stdout/stderr for the exact error",
+    "rc": 127
+```
+
+解决
+
+```
+apt-get install python-simplejson -y
+```
+
+# yum问题
+
+You could try using --skip-broken to work around the problem
+You could try running: rpm -Va --nofiles --nodigest
+
+解决方法如下：
+
+```
+# yum clean all
+# rpm --rebuilddb
+# yum update
+```
+
+# beego 安装
+
+> /usr/local/go/pkg/tool/darwin_amd64/link: /usr/local/go/pkg/tool/darwin_amd64/link: combining dwarf failed: Unknown load command 0x32 (50)
+
+golang version: 1.10.2
+
+os:Mac
+
+原因和解决办法：
+
+golang 编译器bug，
+1.10.4修复了这个问题
+
+## es 7.3启动问题
+
+```
+failed to obtain node locks, tried [[/elasticsearch-5.4.0/data/elasticsearch]] with lock id [0]; maybe these locations are not writable or multiple nodes were started without increasing [node.max_local_storage_nodes] (was [1])
+```
+
+ /usr/local/elasticsearch-6.2.0/config/elasticsearch.yml  配置文件最后添加  
+
+```
+node.max_local_storage_nodes: 2
+```
+
+
+
